maintainIT2/src/objects/Device__c.object
<CustomObject>
    <description>Device instance.</description>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset__c</referenceTo>
        <relationshipLabel>Devices</relationshipLabel>
        <relationshipName>Devices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CalAmp_Id__c</fullName>
        <label>CalAmp Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESN__c</fullName>
        <label>ESN</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMEI__c</fullName>
        <label>IMEI</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Synced_Error_Message__c</fullName>
        <label>Synced Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Synced_Platform__c</fullName>
        <label>Synced Platform</label>
        <picklist>
            <picklistValues>
                <fullName>CalAmp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heroku</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Synced_Status__c</fullName>
        <formula>IF(ISPICKVAL(Synced_Platform__c, &quot;Heroku&quot;),IMAGE(&quot;/img/msg_icons/confirm16.png&quot;,&quot;Record Synced With Heroku&quot;),IMAGE(&quot;/img/msg_icons/error16.png&quot;,&quot;Record not Synced&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Synced Status</label>
        <type>Text</type>
    </fields>
    <label>Device</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ESN__c</columns>
        <columns>IMEI__c</columns>
        <columns>Asset__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DV-{000000}</displayFormat>
        <label>Device Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Devices</pluralLabel>
    <recordTypes>
        <fullName>LMU_3000</fullName>
        <active>true</active>
        <description>LMU 3000</description>
        <label>LMU 3000</label>
    </recordTypes>
    <recordTypes>
        <fullName>LMU_900</fullName>
        <active>true</active>
        <description>LMU 900</description>
        <label>LMU 900</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>